--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "client:build": "vite build",
     "build": "npm run server:build && npm run client:build",
     "serve": "vite preview",
+    "prepush": "exit 0",
     "prepare": "husky install",
     "test": "prettier --check . && eslint . && stylelint \"**/*.css\"",
     "start": ""
